--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,6 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "start": "nodemon index"
@@ -11,11 +9,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcryptjs": "^2.4.3",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.18.3",
+    "fs": "^0.0.1-security",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.9.2",
     "nodemon": "^3.1.0",
     "sequelize": "^6.37.1",
     "sequelize-cli": "^6.6.2"
-  }
+  },
+  "description": ""
 }
